// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBanner should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageBanner
    altText=""
    color=""
    imageSrc=""
    subtitleText=""
    titleText=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        "",
        <Styled(Row)>
          <Column
            width={1}
          >
            <StyledBannerTitle>
              
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              
            </StyledBannerSubtitle>
          </Column>
        </Styled(Row)>,
      ],
      "color": "",
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Column
            width={1}
          >
            <StyledBannerTitle>
              
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              
            </StyledBannerSubtitle>
          </Column>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <StyledBannerTitle>
                
              </StyledBannerTitle>,
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>,
            ],
            "width": 1,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          "",
          <Styled(Row)>
            <Column
              width={1}
            >
              <StyledBannerTitle>
                
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>
            </Column>
          </Styled(Row)>,
        ],
        "color": "",
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Column
              width={1}
            >
              <StyledBannerTitle>
                
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>
            </Column>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <StyledBannerTitle>
                  
                </StyledBannerTitle>,
                <StyledBannerSubtitle>
                  
                </StyledBannerSubtitle>,
              ],
              "width": 1,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ImageBanner should render the subtitleText from props to BannerTitle  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageBanner
    altText=""
    color=""
    imageSrc=""
    subtitleText="And here is a test subtitle!"
    titleText=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        "",
        <Styled(Row)>
          <Column
            width={1}
          >
            <StyledBannerTitle>
              
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              And here is a test subtitle!
            </StyledBannerSubtitle>
          </Column>
        </Styled(Row)>,
      ],
      "color": "",
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Column
            width={1}
          >
            <StyledBannerTitle>
              
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              And here is a test subtitle!
            </StyledBannerSubtitle>
          </Column>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <StyledBannerTitle>
                
              </StyledBannerTitle>,
              <StyledBannerSubtitle>
                And here is a test subtitle!
              </StyledBannerSubtitle>,
            ],
            "width": 1,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "And here is a test subtitle!",
              },
              "ref": null,
              "rendered": "And here is a test subtitle!",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          "",
          <Styled(Row)>
            <Column
              width={1}
            >
              <StyledBannerTitle>
                
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                And here is a test subtitle!
              </StyledBannerSubtitle>
            </Column>
          </Styled(Row)>,
        ],
        "color": "",
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Column
              width={1}
            >
              <StyledBannerTitle>
                
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                And here is a test subtitle!
              </StyledBannerSubtitle>
            </Column>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <StyledBannerTitle>
                  
                </StyledBannerTitle>,
                <StyledBannerSubtitle>
                  And here is a test subtitle!
                </StyledBannerSubtitle>,
              ],
              "width": 1,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "And here is a test subtitle!",
                },
                "ref": null,
                "rendered": "And here is a test subtitle!",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ImageBanner should render the titleText from props to BannerTitle  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageBanner
    altText=""
    color=""
    imageSrc=""
    subtitleText=""
    titleText="Here is a test title!"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        "",
        <Styled(Row)>
          <Column
            width={1}
          >
            <StyledBannerTitle>
              Here is a test title!
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              
            </StyledBannerSubtitle>
          </Column>
        </Styled(Row)>,
      ],
      "color": "",
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Column
            width={1}
          >
            <StyledBannerTitle>
              Here is a test title!
            </StyledBannerTitle>
            <StyledBannerSubtitle>
              
            </StyledBannerSubtitle>
          </Column>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <StyledBannerTitle>
                Here is a test title!
              </StyledBannerTitle>,
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>,
            ],
            "width": 1,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Here is a test title!",
              },
              "ref": null,
              "rendered": "Here is a test title!",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          "",
          <Styled(Row)>
            <Column
              width={1}
            >
              <StyledBannerTitle>
                Here is a test title!
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>
            </Column>
          </Styled(Row)>,
        ],
        "color": "",
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Column
              width={1}
            >
              <StyledBannerTitle>
                Here is a test title!
              </StyledBannerTitle>
              <StyledBannerSubtitle>
                
              </StyledBannerSubtitle>
            </Column>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <StyledBannerTitle>
                  Here is a test title!
                </StyledBannerTitle>,
                <StyledBannerSubtitle>
                  
                </StyledBannerSubtitle>,
              ],
              "width": 1,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Here is a test title!",
                },
                "ref": null,
                "rendered": "Here is a test title!",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
